design: fixed overflow of searchbar

--- a/src/assets/style/nav.scss
+++ b/src/assets/style/nav.scss
@@ -40,6 +40,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 80%
   }
 
   &.nav-search {
